--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
     <meta name="description" content="we sale fresh lemon food here"/>
     <meta name="og:title" content="fresh lemon food"/>
     <meta name="og:image" content=""/>
+    <!-- api js file  -->
+    <!-- <script src="https://raw.githubusercontent.com/Meta-Front-End-Developer-PC/capstone/master/api.js"></script> -->
 
 
 
